# Origami-Knight

./: CMakeLists.txt  LICENSE  README.md  all.h  imagel.c  imagel.h  ork.c  ork.h  sprite.c  sprite.h
c/: all.c  collision.c  ork.c  sprite.c
include/: all.h  collision.h  imagel.h  map.h  ork.h  sprite.h
include/network/unix/: client.h  server.h
include/network/win/: client.h  server.h
media/map/: spawn.txt
