cmake_minimum_required (VERSION 2.6)
project (OrigamiKnight)
include_directories("${PROJECT_SOURCE_DIR}")
add_executable(OrigamiKnight ork.c sprite.c)
include(FindPkgConfig)
pkg_search_module(SDL2 REQUIRED sdl2)
include_directories(${SDL2_INCLUDE_DIRS})
target_link_libraries(OrigamiKnight ${SDL2_LIBRARIES})
pkg_search_module(SDL2_IMAGE REQUIRED SDL2_image)
include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
target_link_libraries(OrigamiKnight ${SDL2_IMAGE_LIBRARIES})
