cmake_minimum_required (VERSION 2.6)
project (OrigamiKnight)
file(COPY ${PROJECT_SOURCE_DIR}/media DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
include_directories("${PROJECT_SOURCE_DIR}")
add_executable(OrigamiKnight ork.c sprite.c imagel.c)
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   include(FindPkgConfig)
   pkg_search_module(SDL2 REQUIRED sdl2) 
   include_directories(${SDL2_INCLUDE_DIRS})
   target_link_libraries(OrigamiKnight ${SDL2_LIBRARIES})
   pkg_search_module(SDL2_IMAGE REQUIRED SDL2_image)
   include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
   target_link_libraries(OrigamiKnight ${SDL2_IMAGE_LIBRARIES})
   SET(OperatingSystem "Mac OS X")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    include(FindPkgConfig)
    pkg_search_module(SDL2 REQUIRED sdl2)
    include_directories(${SDL2_INCLUDE_DIRS})
    target_link_libraries(OrigamiKnight ${SDL2_LIBRARIES})
    pkg_search_module(SDL2_IMAGE REQUIRED SDL2_image)
    include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
    target_link_libraries(OrigamiKnight ${SDL2_IMAGE_LIBRARIES})
    SET(OperatingSystem "Linux")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    include_directories(${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/include)
    target_link_libraries(OrigamiKnight ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/lib/x64/SDL2.lib)
    target_link_libraries(OrigamiKnight ${PROJECT_SOURCE_DIR}/lib/Win32-64/SDL2-2.0.3/lib/x64/SDL2main.lib)
    SET(OperatingSystem "Windows")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")